--- a/css/styles.css
+++ b/css/styles.css
@@ -9,20 +9,195 @@
 body {
   font-family: 'Merriweather', serif;
   line-height: 1.6;
+  color: #888;
+  margin: 0;
 }
 
-input,
-select,
+h1 {
+  color: #fff;
+  background: #000;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding: 25px 0;
+}
+
+h2,
+legend {
+  color: #000;
+}
+
+h2 {
+  font-size: 1.4rem;
+  margin-top: 1em;
+  margin-bottom: 0;
+}
+
+legend {
+  font-size: 1.3rem;
+  padding: 1rem 0;
+}
+
+.description {
+  text-align: center;
+  position: relative;
+  border-bottom: 1px solid #000;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
+}
+
+.description::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  height: 3px;
+  background: #000;
+}
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  padding-left: 10px;
+}
+
+.contact input,
+.contact select,
 textarea {
-  display: block;
+  display: inline-block;
+  width: 100%;
+  margin: 0;
+  background: #f2f2f2;
+  border: none;
+  border-radius: 4px;
+  height: 50px;
+  margin-bottom: 1em;
+  transition-duration: 2s;
+  transition-property: background;
 }
 
+.contact input:focus,
+.contact select:focus {
+  background: #a3daf9;
+  border: 2px solid #093a58;
+  border-radius: 4px;
+  outline: none;
+}
 
+textarea {
+  padding: 10px;
+  height: 100px;
+  margin-bottom: 2rem;
+}
+
+textarea:focus {
+  background: #a3daf9;
+  border: 2px solid #093a58;
+  border-radius: 4px;
+  outline: none;
+}
+
+.contact label {
+  display: inline-block;
+  width: 100%;
+  margin: 0;
+}
+
+.contact {
+  border-bottom: 3px solid #000;
+  padding-bottom: 1rem;
+}
+
+input::-webkit-input-placeholder {
+  color: #aaa;
+  text-align: right;
+  font-size: .9rem;
+  font-style: italic;
+  padding-right: 1.5rem;
+}
+
+.newsletter input {
+  margin-right: 10px;
+}
+
+p {
+  margin-top: 0;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+  color: #fff;
+  background: #3acec2;
+  border: none;
+  border-radius: 4px;
+  font-family: inherit;
+}
+
+button:focus {
+  border: 2px solid #093a58;
+  border-radius: 4px;
+  outline: none;
+}
+
+#zipcode {
+  display: block;
+  width: 50%;
+}
+
+.wrapper {
+  margin: 0 1rem;
+}
+
+.main-footer {
+  vertical-align: middle;
+  background: #eee;
+  text-align: center;
+  font-size: .75rem;
+  font-style: italic;
+  margin-top: 1.5rem;
+  padding: 20px 0;
+}
+
+/* ===============================
+  Base Layout Styles
+=============================== */
+
+/* ---- Layout Containers ---- */
 
 /* ===============================
   Media Queries
 =============================== */
 
 @media (min-width: 768px) {
+
+  .wrapper {
+    width: 70%;
+    max-width: 1150px;
+    margin: 0 auto;
+  }
+
+  .contact label {
+    width: 25%;
+    margin-right: -6px;
+  }
+
+  .contact input,
+  .contact select {
+    width: 75%;
+  }
+
+  #zipcode {
+    display: inline-block;
+    width: 35%;
+  }
 
 }
